--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js 3000"
+    "start": "node app.js 3000",
+    "build": "netlify deploy --prod",
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,10 @@
   "homepage": "https://github.com/maanavshah/stock-market-india#readme",
   "dependencies": {
     "axios": "^0.18.1",
-    "express": "^4.16.4",
+    "express": "^4.18.3",
+    "netlify-cli": "^17.17.1",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "indian-stock-exchange": "^1.3.33",
     "loadash": "^1.0.0"
   }
