--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js 3000",
-    "build": "netlify deploy --prod",
+    "build": "netlify deploy --prod"
   },
   "repository": {
     "type": "git",
